added referee comments

--- a/radvalley.tex
+++ b/radvalley.tex
@@ -159,7 +159,8 @@ has almost completely dissipated after just a few Myrs \citep{lee14,lee16,lopez1
 Observational tests of the aforementioned theoretical frameworks have become feasible in recent years due to 
 the precise refinement of measured planet radii following improved stellar host characterization via  
 spectroscopy, asteroseismology, and \gaia{} parallaxes
-\citep[e.g.][]{fulton17,berger18,fulton18,vaneylen18,martinez19}. Each of these independent studies clearly
+\citep[e.g.][]{fulton17,berger18,fulton18,vaneylen18,martinez19,hardegree20}.
+Each of these independent studies clearly
 resolved the radius valley among small close-in planets orbiting Sun-like stars.
 A variety of trends were also observed in either
 the raw or in the completeness-corrected (i.e. the occurrence rate) distributions. Firstly,
@@ -289,7 +290,7 @@ with measured values of \teff{,} \logg{,} [Fe/H], and $R_s$.
 We proceed with refining the stellar parameters by cross-matching our initial \ktwo{} sample with \gaia{}  
 DR2 using the \gaia{-}\ktwo{} data products from Megan Bedell\footnote{\url{https://gaia-kepler.fun/}}. Where
 available, we retrieve each star's celestial coordinates, stellar parallaxes $\varpi$, and \gaia{} photometry.
-\textbf{Measurements of $R_s$ then follow from the methodology of \cite{berger18} which is outlined as follows.}
+\textbf{Measurements of $R_s$ then follow from the methodology of \cite{berger18}, which is outlined as follows.}
 The formalism of \cite{bailerjones18} is used to transform the assumed
 Gaussian-distributed $\varpi$ PDFs into stellar distance PDFs which need not remain Gaussian.
 Using the measured distances $d$ and celestial coordinates, we interpolate over the $E_{B-V}$ extinction maps using the
@@ -788,17 +789,17 @@ as the non-rocky peak in what follows.}
   Criterion (BIC) for each mixture model with its unique number of components.
   Multiple components are strongly favored over a single component indicating that the peaks in the
   occurrence rate distribution are signficant. For example,
-  $\Delta(\text{BIC}_{12})=\text{BIC}_1-\text{BIC}_2\sim 400$
+  $\Delta \text{BIC}_{12}=\text{BIC}_1-\text{BIC}_2\sim 400$
   such that the two-component model is strongly favored over a single component\footnote{\cite{kass95}
     recommend that a model $n$ is strongly favored over a competing model $m$
-    when $\Delta(\text{BIC}_{mn})=\text{BIC}_m-\text{BIC}_n > 10$.}. We note that the three-component model
-  is found to have the lowest BIC with $\Delta(\text{BIC}_{23})=\text{BIC}_2-\text{BIC}_3\sim 90$ and
-  $\Delta(BIC_{34})=BIC_3-BIC_4\sim -10$ such that it is strongly favored over two components but only
+    when $\Delta \text{BIC}_{mn}=\text{BIC}_m-\text{BIC}_n > 10$.}. We note that the three-component model
+  is found to have the lowest BIC with $\Delta \text{BIC}_{23}=\text{BIC}_2-\text{BIC}_3\sim 90$ and
+  $\Delta \text{BIC}_{34}=BIC_3-BIC_4\sim -10$ such that it is strongly favored over two components but only
   marginally favored over a more complex mixture model of four Gaussian components. The three components
   in the MAP $f_{ij}$ map encapsulate the rocky planet peak plus the two apparent peaks around $\sim 2.2$
   R$_{\oplus}$ and centered on $\sim 11$ days and $\sim 50$ days. Given the uncertaintities on $f_{ij}$,
   which are not communicated in \autoref{fig:fmap}, it is unclear whether the third component
-  at $P=50 days$ and $r_p=2.2$ R$_{\oplus}$ is a real feature in the occurrence rate distribution. Deeper
+  at $P=50$ days and $r_p=2.2$ R$_{\oplus}$ is a real feature in the occurrence rate distribution. Deeper
   transiting planet searches around low mass stars will be required to investigate the validity of this
   third component.} 
 
@@ -813,12 +814,12 @@ Next, we marginalize over $P$ and compute the one-dimensional occurrence rate of
 as a function of $r_p$. The resulting occurrence rates are shown in \autoref{fig:rphist} in which the bimodal
 distribution of planet sizes is again clearly discernible in the MAP occurrence rates.
 \textbf{The uncertainty on each $f_j$ bin is computed from the $16^{\text{th}}$ and $84^{\text{th}}$ percentiles
-  of its $f_j$ posterior and are thus correlated given the smooth nature of the two-dimensional occurrence
-  rates (\autoref{fig:fmap}).}
+  of its $f_j$ posterior and are thus correlated because the two-dimensional occurrence rates
+  (\autoref{fig:fmap}) are smoothly varying such that adjacent radius bins are not independent.}
 In \autoref{fig:rphist} we ignore the measured occurrence rates in bins with
 $r_p\lesssim 1$ R$_{\oplus}$ where the detection sensitivity is poor.
 
-  
+
 \begin{figure*}
   \centering
   \includegraphics[scale=.8]{figures/rphist_double.png}
@@ -857,8 +858,8 @@ around low mass stars.
 \textbf{Similarly to the two-dimensional occurrence rates in Sect.~\ref{sect:fmap}, we test the statistical significance
 of the apparent bimodality in \autoref{fig:rphist} by comparing the BIC values for 1-5 components of a Gaussian
 mixture model. We find that the two-component model has the lowest BIC and is strongly favored over a single
-component as $\Delta(\text{BIC}_{12})=\text{BIC}_1-\text{BIC}_2 \sim 20$. Furthermore, 
-$\Delta(\text{BIC}_{23})=\text{BIC}_2-\text{BIC}_3 \sim -10$ such that two components are also favored over
+component as $\Delta \text{BIC}_{12}=\text{BIC}_1-\text{BIC}_2 \sim 20$. Furthermore, 
+$\Delta \text{BIC}_{23}=\text{BIC}_2-\text{BIC}_3 \sim -10$ such that two components are also favored over
 a more complex mixture model of three Gaussian components. These results emphasize
 that the detection of the valley is significant and that it likely features two components representing
 rocky and larger, non-rocky planet populations respectively.}
@@ -912,8 +913,8 @@ with $r_p>1$ R$_{\oplus}$ from
 further substantiated as the contrast between the maximum $f_j$ of the rocky planet peak ($r_p \sim 1.3$ R$_{\oplus}$)
 and the minimum $f_j$ of the valley ($r_p \sim 1.6$ R$_{\oplus}$) decreases from 0.070 to 0.054 R$_{\oplus}$. This
 \textbf{corresponds to a less significant detection of the bimodality in the radiu valley as we find that
-$\Delta(\text{BIC}_{12})\sim 4$ which is less than the value obtained when only confirmed planets are considered:
-$\Delta(\text{BIC}_{12})\sim 20$.} Contamination by true FPs in the planet sample containing
+$\Delta \text{BIC}_{12}\sim 4$ which is less than the value obtained when only confirmed planets are considered:
+$\Delta \text{BIC}_{12}\sim 20$.} Contamination by true FPs in the planet sample containing
 PCs may contribute to the reduced significance of the valley so we revert to considering confirmed planets only
 for the remainder of this study.
 
@@ -1521,11 +1522,11 @@ As noted in Sect.~\ref{sect:fmap} and evidenced in \autoref{fig:fmap}, the radiu
 void of confirmed planets. If the radius valley around low mass stars is produced solely from the late formation
 of terrestrial planets in a gas-poor environment---as the measured slope of the radius valley suggests
 (\autoref{fig:fmapF})---then the partial filling of the valley may point to a continuum of formed planet sizes
-rather than two distinct populations of rocky and non-rocky planets. However if the radius valley is instead
-sculpted by atmospheric post processing---as the radius valley around Sun-like stars seems to be
+rather than to two distinct populations of rocky and non-rocky planets. However, if the radius valley is instead
+sculpted by atmospheric post processing---as the radius valley around Sun-like stars appears to be
 \citep{fulton17,fulton18,vaneylen18,martinez19}---then the partial filling of the valley would imply that post
 processing from photoevaporation or core-powered mass loss is less efficient around lower mass stars.
-This seems plausible in the photoevaporation scenario wherein the atmospheric mass loss rate is proportional to
+This seems plausible in the photoevaporation scenario as the atmospheric mass loss rate is proportional to
 the XUV luminosity of the host star. X-rays in particular are the dominant driver of atmospheric mass loss by
 photoevaporation and observations have revealed that Sun-like stars have higher absolute X-ray luminosities than
 their low mass star counterparts \citep{mcdonald19} despite the latter exhibiting a few to ten times larger
@@ -1535,7 +1536,7 @@ Visual
 investigation of the occurrence rates of small close-in planets in the stellar mass bins considered by
 \citealt{fulton18} (i.e. $M_s<0.97$ M$_{\odot}$, $0.97 \leq M_s/\text{M}_{\odot} \leq 1.11$, and $M_s>1.11$ M$_{\odot}$)
 suggests that the trend of increased filling of the valley with decreasing stellar mass may hold true   
-\citep[c.f. Figure 9;][]{fulton18}. However we emphasize that this hypothesis has not been tested rigorously.   
+\citep[c.f. Figure 9;][]{fulton18}. However, we emphasize that this hypothesis has not been tested rigorously.   
 We also note that classical models of photoevaporation do not explicitly consider the effects of
 planetary magnetic fields on the efficiency of atmospheric mass loss and indeed the presence of such magnetic
 fields can partially stall atmospheric escape by varying amounts depending on the core composition of the
@@ -1545,7 +1546,7 @@ The simplest explanation for the imperfect clearing of the radius valley instead
 gas-poor formation or atmospheric post processing is solely responsible for the valley's formation.
 In comparing the slope of the radius valley around low mass and Sun-like stars (\autoref{fig:fmapF}), it is
 clear that the dominant process affecting the slope of the valley with insolation
-evolves from a positive slope to a negative slope from Sun-like to low mass stars. However,
+evolves from a positive slope to a negative slope from Sun-like to low mass stars. Unfortunately,
 the threshold $M_s$ dividing each regime is unresolved such that the planet population considered herein
 likely features the superposition of processes such as gas-poor formation and thermally driven mass loss. The
 result of competing processes on the observed planet population could naturally explain the apparent
@@ -1573,7 +1574,8 @@ using data from the \kepler{} and \ktwo{} transit surveys. Our main findings are
   ($r_{p,\text{valley}} \propto F^{-0.060\pm 0.025}$) unlike 
   around Sun-like stars whose measured slope is positive
   \citep[$r_{p,\text{valley}} \propto F^{0.12\pm 0.02}$;][]{martinez19}. This result 
-  supports models of gas-poor terrestrial planet formation without invoking atmospheric escape from photoevaporation,
+  supports models of gas-poor terrestrial planet formation around low mass stars,
+  without invoking atmospheric escape from photoevaporation,
   core-powered mass loss, or erosion by planetesimal impacts.
 \item The non-rocky planet peak in the bimodal occurrence rates is centered at $\sim 2$ R$_{\oplus}$ and effectively
   vanishes around mid-M dwarfs as rocky planets ($\lesssim 1.54$ R$_{\oplus}$) increasingly dominate the close-in
@@ -1589,7 +1591,7 @@ using data from the \kepler{} and \ktwo{} transit surveys. Our main findings are
   \tess{} or $\mathcal{O}(4700)$ mid-M dwarfs observed with \plato{} based on its expected performance and
   observing strategy.
 \item We advocate that transiting planets around stars with \teff{} $<4700$ K, and whose orbital periods and radii are
-  situated between model predictions of the location of the rocky to non-rocky transition (see \autoref{fig:transition}),
+  situated between model predictions of the location of the rocky/non-rocky transition (see \autoref{fig:transition}),
   should be targeted by RV campaigns to resolve the location and slope of this transition with precise bulk density
   measurements. 
 \end{itemize}
