--- a/refs.bib
+++ b/refs.bib
@@ -28345,3 +28345,20 @@ archivePrefix = {arXiv},
       adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
+@ARTICLE{hardegree20,
+       author = {{Hardegree-Ullman}, Kevin K. and {Zink}, Jon K. and
+         {Christiansen}, Jessie L. and {Dressing}, Courtney D. and
+         {Ciardi}, David R. and {Schlieder}, Joshua E.},
+        title = "{Scaling K2. I. Revised Parameters for 222,088 K2 Stars and a K2 Planet Radius Valley at 1.9 $R_{\oplus}$}",
+      journal = {arXiv e-prints},
+     keywords = {Astrophysics - Solar and Stellar Astrophysics, Astrophysics - Earth and Planetary Astrophysics},
+         year = 2020,
+        month = jan,
+          eid = {arXiv:2001.11511},
+        pages = {arXiv:2001.11511},
+archivePrefix = {arXiv},
+       eprint = {2001.11511},
+ primaryClass = {astro-ph.SR},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2020arXiv200111511H},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
